--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
           </button>
           <a class="navbar-brand" href="#">The Eyescream Project</a>
         </div>
+	<p> Coming soon (Monday tops!)
       </div>
     </nav>
 
