--- a/index.html
+++ b/index.html
@@ -35,20 +35,26 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">The Eyescream Project</a>
+          <a class="navbar-brand" href="#">Facebook AI Research</a>
         </div>
-	<p> Coming soon (Monday tops!)</p>
       </div>
     </nav>
 
     <div class="container-fluid">
       <!-- Example row of columns -->
       <div class="row">
-        <div class="col-md-12___1">
+        <div class="col-md-12___1" style="width: 100%">
+	  <div class="dtitle">
+	    <h1 class="mtitle"> The Eyescream Project </h1>
+	    <h2 class="mtitle2"><i> NeuralNets dreaming natural images </i></h2>
+	    <h2 class="mtitle3"> - <a href="http://soumith.ch">Soumith</a>, <a href="http://www.cs.nyu.edu/~denton">Emily</a>, <a href="http://www.sci.ccny.cuny.edu/~szlam/">Arthur & <a href="https://research.facebook.com/researchers/1522313361316754/rob-fergus/">Rob</a> </h2>
+	  </div>
 	  <canvas id="screamer" style="border:1px solid #000000;"></canvas>
         </div>
+	<div class="container">
+	  
+	</div>
       </div>
-
       <hr>
 
       <footer>
