--- a/index.html
+++ b/index.html
@@ -52,6 +52,16 @@
 	  <canvas id="screamer" style="border:1px solid #000000;"></canvas>
         </div>
 	<div class="container">
+	  Making a machine generate (dream, hallucinate, ...) natural images is an interesting and complex problem. It is also a lot of fun.
+
+	  About two months ago, Emily, Arthur, Rob and I decided to try something that's been at the back of our heads since Ian Goodfellow first presented (the awesome) Generative Adversarial Networks at NIPS last year. Ian's work came close to generating natural-ish images, but still fell short in terms of image quality. We decided to see if we can attempt to do better.
+
+	  Adversarial networks are fun things. You pit a generative (G) machine against a discriminative (G) machine and make them fight. The G machine attempts to produce fake data that looks so real that the D machine cannot tell it apart. The D machine is learning to not get fooled by the G machine. As these both play their mini-max game, you hope to get a good quality generator, that can generate infinite samples of images that look real.
+
+	  [Street Fighter Image]
+
+
+	  Just tell me how it works!
 	  
 	</div>
       </div>
