--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 	    simply copy the training images. This is not a true generative model that generalizes to 
 	    all natural images, but one that overfit heavily on the training set.
 
-	    This is thing we meticulously checked while training our networks, i.e. that our network is simply
+	    This is something we meticulously checked while training our networks, i.e. that our network is simply
 	    not copying the training samples.
 
 	    We've done this in a couple of ways.
