--- a/index.html
+++ b/index.html
@@ -73,11 +73,11 @@
 	  <br/>
 	  <p class='lead'> Adversarial networks are fun things. </p>
 	  <p>
-	    You pit a generative (G) machine against a discriminative (G) machine and make them fight. 
-	    The G machine attempts to produce fake data that looks so real that the D machine cannot tell it apart. 
+	    You pit a generative (G) machine against a discriminative (D) machine and make them fight. 
+	    The G machine attempts to produce fake data that looks so real that the D machine cannot tell it is fake. 
 	    The D machine is learning to not get fooled by the G machine. 
-	    As these both play their mini-max game, you hope to get a good quality generator, 
-	    that can generate infinite samples of images that look real.
+	    After these have played their minimax game, you hope to get a good quality generator 
+	    that can generate as many real looking samples as you want.
 	  </p>
 	  <div class="thumbnail with-caption">
 	    <img src="https://upload.wikimedia.org/wikipedia/en/4/46/Street_Fighter_II_%28arcade%29_screenshot.png"
@@ -89,16 +89,17 @@
 	  <h1> The research process </h1>
 	  <h3> First steps: making Goodfellow's neural network bigger and deeper </h3>
 	  <p> To keep this section brief, this did not work. It didn't work at all.
-	    The adversarial training was harder to be stable, and when we did get a stable model,
+	    The adversarial training was more unstable, and when we did get a stable model,
 	    it did not improve image sample quality.
 	  </p>
 
 	  <h3> Next try: multi-scale generators </h3>
-	  <p> The key idea that got us going was to train a laplacian scale of networks, 
-	    each network predicting one scale ahead. 
+	  <p> The key idea that got us going was to train a Laplacian pyramid of networks, 
+	    each network predicting the next finer scale. 
 
-	    What that means in simpler terms is that, the network at a particular scale gets 
-	    the coarse-scaled version of the image to predict, and generates the finer-scale version of the image.
+	    What that means in simpler terms is that the network at a particular scale gets 
+	    the coarsened version of the image to predict, and generates the refinement necessary to 
+	    reconstruct the original image.
 	  </p>
 	  <div class="thumbnail with-caption">
 	    <img src="images/LAPGAN.png"
