--- a/index.html
+++ b/index.html
@@ -245,6 +245,12 @@
 	      </li>
 	    </ul>
 	  </p>
+	  <h1> Details of our models </h1>
+	  <p> Each of our generative and discrimnative models were standard Convolution Neural Networks between 3 to 6 layers.
+	    For the complete architectural details, go to 
+	    <a href="https://gist.github.com/soumith/e3f722173ea16c1ea0d9">this link for CIFAR-10</a> 
+	    and <a href="https://gist.github.com/soumith/3f87517ad69e1620c70d">this link for LSUN/Imagenet</a>
+	  </p>
 	  <h1> Where do we go from here? </h1>
 	  <p> There are so many things to explore, as follow-up work to this paper. A list of simple ideas would be:
 	    <ul>
