--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 	  <h1> The lead up </h1>
 	  <p> 
 	    About two months ago, we decided to try something that's been 
-	    at the back of our heads since <i> Ian Goodfellow </i> first presented (the awesome) 
+	    at the back of our heads since <b> Ian Goodfellow </b> first presented (the awesome) 
 	    Generative Adversarial Networks at NIPS last year. Ian's work came close to generating 
 	    natural-ish images, but still fell short in terms of image quality. 
 	    The paper excited us, and we discussed it to length at the conference and after.
