--- a/index.html
+++ b/index.html
@@ -298,5 +298,14 @@
       <script src="js/vendor/bootstrap.min.js"></script>
       <script src="js/nn.js"></script>
       <script src="js/main.js"></script>
+      <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
+      <script>
+        (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
+        function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
+        e=o.createElement(i);r=o.getElementsByTagName(i)[0];
+        e.src='//www.google-analytics.com/analytics.js';
+        r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
+        ga('create','UA-29799884-1','auto');ga('send','pageview');
+      </script>
     </body>
 </html>
