adding nearest neighbors stuff

--- a/index.html
+++ b/index.html
@@ -196,6 +196,9 @@
 	  <p>
 	    For each of our generated sample, we found it's nearest neighbor in the training set using a 
 	    L2 distance in pixel space.
+	    <a href="http://www.cs.nyu.edu/~denton/cifar_nearest_neighbours/L2_pixel.html">
+	      For a large sheet of samples showing the nearest neighbors in pixel space, click here
+	    </a>
 	  </p>
 	  <h4> Nearest neighbors using L2 feature-space distance </h4>
 	  <p>
@@ -204,6 +207,9 @@
 	    <a href="https://gist.github.com/mavenlin/e56253735ef32c3c296d">
 	      this well-performing Network-in-Network CIFAR model
 	    </a>.
+	    <a href="http://www.cs.nyu.edu/~denton/cifar_nearest_neighbours/L2_feature.html">
+	      For a large sheet of samples showing the nearest neighbors in feature space, click here
+	    </a>
 	  </p>
 	  <p> Both the experiments comfortably concluded that our networks are generating images that are not
 	    just trivial manipulations of copied training images.
