--- a/index.html
+++ b/index.html
@@ -273,8 +273,9 @@
 	  </p>
 	  <h1> Code etc. </h1>
 	  <p>
-	    We will release the Torch code to train all of our models by the end of the week.
-	    Come back soon to this section and get the code.
+	    The training code (in torch) is located here: 
+	    <a href="https://github.com/facebook/eyescream">https://github.com/facebook/eyescream</a>
+	   
 	  </p>
 	</div>
       </div>
